--- a/config/cppfile_configs.yaml
+++ b/config/cppfile_configs.yaml
@@ -1,3 +1,4 @@
+# get json data
 parsers:
   # CXXParser should always put first
   - name: CXXParser
@@ -9,7 +10,11 @@ parsers:
         include:
           - '@agoraio-extensions/terra_shared_configs:headers/rtc_4.3.0/include/*.h'
         exclude:
-          - '@agoraio-extensions/terra_shared_configs:headers/rtc_4.3.0/include/time_utils.h'
-          - '@agoraio-extensions/terra_shared_configs:headers/rtc_4.3.0/include/IAgoraMediaComponentFactory.h'
+          - ''
 
-version: 4.3.0
+## from config folder
+## from json to code
+renderers:
+  - path: ../renderer/binding.ts
+  - path: ../renderer/binding_test.ts
+  - path: ../renderer/api-type.ts
