add basic renderer & templates
1. basic blueprint template
2. AgoraUERtcEngine cpp header
3. AgoraUERtcEngine cpp file

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,3 +19,5 @@ parsers:
 renderers:
 #   # Configuration for the first renderer
   - path: ../renders/blueprint-renderer.ts
+  - path: ../renders/cpp-header-renderer.ts
+  - path: ../renders/cpp-cpp-renderer.ts
