serveral bp code generation updates
1. preprocess node data to register class,struct,enum first
2. add some type conversion and conversion method

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,5 +20,6 @@ renderers:
 #   # Configuration for the first renderer
   - path: ../renders/blueprint-enum-renderer.ts
   - path: ../renders/blueprint-renderer.ts
+  - path: ../renders/blueprint-cpp-renderer.ts
   - path: ../renders/cpp-header-renderer.ts
   - path: ../renders/cpp-cpp-renderer.ts
