update github action

--- a/.github/workflows/doc_pages.yml
+++ b/.github/workflows/doc_pages.yml
@@ -37,14 +37,14 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           name: book
-          path: 'docs/book'
+          path: docs/book/
           workflow: doc_build.yml
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: 'docs/book'
+          path: docs/book/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
