add permission to workflow

--- a/.github/workflows/doc_pages.yml
+++ b/.github/workflows/doc_pages.yml
@@ -12,6 +12,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
+  actions: read
   contents: read
   pages: write
   id-token: write
