--- a/config/templates/blueprint_config_tmpl.yaml
+++ b/config/templates/blueprint_config_tmpl.yaml
@@ -55,6 +55,10 @@ parsers:
   - name: ExtractCallbackHandler
     path: ../parsers/extract_callbackhandler_parser.ts
 
+  ## reorder node based on dependency
+  - name: OrderNodeParser
+    package: '@agoraio-extensions/terra_shared_configs'
+
 # List of renderer configurations
 renderers:
 #   # Configuration for the first renderer
