tmp: reorder nodes after override_nodes

--- a/config/templates/blueprint_config_tmpl.yaml
+++ b/config/templates/blueprint_config_tmpl.yaml
@@ -19,7 +19,7 @@ parsers:
 
 
   - name: OverrideNodeParser
-    package: '@agoraio-extensions/terra_shared_configs'
+    path: ../parsers/override_node_parser.ts
     args:
       customHeaderFileNamePrefix: 'Custom'
       includeHeaderDirs:
